--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 ---
 layout: post-index
-title: Latest Posts
-description: "Describe this nonsense."
+description: "Blog of one of the Passionate Software Engineers out there"
 tags: [Jekyll, theme, themes, responsive, blog, modern]
-comments: false
+comments: true
 image:
   feature: abstract-1.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
 ---
 
 {% for post in paginator.posts %}
